tests/rustdoc-ui/check-doc-alias-attr-location.stderr
error: `#[doc(alias = "...")]` isn't allowed on foreign module
  --> $DIR/check-doc-alias-attr-location.rs:7:7
   |
LL | #[doc(alias = "foo")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:10:7
   |
LL | #[doc(alias = "bar")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:16:7
   |
LL | #[doc(alias = "foobar")]
   |       ^^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on type alias in implementation block
  --> $DIR/check-doc-alias-attr-location.rs:18:11
   |
LL |     #[doc(alias = "assoc")]
   |           ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

